--- a/_includes/socmed_links.html
+++ b/_includes/socmed_links.html
@@ -1,5 +1,5 @@
 <div id="socialmedia_links">
-    <a href="{{ site.author.twitter }}" class="socmed_button">Twitter</a>&nbsp;
-    <a href="{{ site.author.youtube }}" class="socmed_button">Youtube</a>&nbsp;
-    <a href="{{ site.author.email }}"   class="socmed_button">Email</a>
+    <a href="https://twitter.com/{{ site.author.twitter }}" target="_blank" class="socmed_button">Twitter</a>&nbsp;
+    <a href="{{ site.author.youtube }}" target="_blank" class="socmed_button">Youtube</a>&nbsp;
+    <a href="mailto:{{ site.author.email }}"   target="_blank" class="socmed_button">Email Us</a>
 </div>
