--- a/_includes/socmed_twitter.html
+++ b/_includes/socmed_twitter.html
@@ -1,1 +1,1 @@
-<a href="https://twitter.com/share" class="twitter-share-button" data-via="{{ twitter }}"></a>
+<a href="https://twitter.com/share" class="twitter-share-button" data-via="{{ twitter }}" data-size="large"></a>
