--- a/_includes/post_right_sidebar.html
+++ b/_includes/post_right_sidebar.html
@@ -7,42 +7,7 @@
     </div>
     -->
 
-    <!-- The following code snippet was taken from http://zhangwenli.com -->
-    <!-- http://zhangwenli.com/blog/2014/07/15/jekyll-related-posts-without-plugin/ -->
-    {% assign hasSimilar = '' %}
-    {% for post in site.related_posts %}
-        {% assign postHasSimilar = false %}
-        {% for tag in post.tags %}
-            {% for thisTag in page.tags %}
-                {% if postHasSimilar == false and hasSimilar.size < 6 and post != page and tag == thisTag %}
-                    {% if hasSimilar.size == 0 %}
-                        <h1>Related Posts</h1>
-                        <ul class="list_style_none padding_left_none padding_bottom_25">
-                    {% endif %}
-                    <li>
-                        {% if post.date == nil %}
-                        <a href="{{ post.url }}">
-                            {{ post.title }}
-                            {% if post.series %}
-                                (Series: {{ post.series }})
-                            {% endif %}
-                        </a>
-                        {% else %}
-                        <a href="{{ post.url }}">
-                            <!-- {{ post.title }} &ndash; {{ post.date | date_to_string }} -->
-                            {{ post.title }}
-                            {% if post.series %}
-                                (Series: {{ post.series }})
-                            {% endif %}
-                        </a>
-                        {% endif %}
-                    </li>
-                    {% capture hasSimilar %}{{ hasSimilar }}*{% endcapture %}
-                    {% assign postHasSimilar = true %}
-                {% endif %}
-            {% endfor %}
-        {% endfor %}
-    {% endfor %}
+    {% include post_related.html %}
 
     {% if hasSimilar.size > 0 %}
         </ul>
