Delete class attribute

--- a/_includes/page_right_sidebar.html
+++ b/_includes/page_right_sidebar.html
@@ -30,7 +30,7 @@
     -->
     
     <!--
-    <div class="news_roll" id="newsroll">
+    <div id="news_roll">
         <h1>Latest</h1>
         <div class="news_items">
             <div class="news_item">
