--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -111,5 +111,5 @@ $font_size_footer:          13px;
 $font_size_license:         13px;
 
 // Social media buttons
-$font_socmed:               $font_sans_thin;
-$font_size_socmed:          13px;
+$font_button:               $font_sans_thin;
+$font_size_button:          13px;
