--- a/_includes/common_menu.html
+++ b/_includes/common_menu.html
@@ -1,10 +1,18 @@
-<div id="nav_left">
-    <!-- <h1>Main Menu</h1> -->
-    {% for p in site.pages_list %}
-        {% if page.group == p[0] %}
-        <li class='list_style_none'><a href="{{ site.baseurl }}{{ p[1]  }}" class="active"><span class="arrow">&#x25B6;</span>{{ p[0] }}</a></li>
-        {% else %}
-        <li class='list_style_none'><a href="{{ site.baseurl }}{{ p[1]  }}"><span class="arrow">&#x25B6;</span>{{ p[0] }}</a></li>
-        {% endif %}
-    {% endfor %}
-</div>
+<!-- <h1>Main Menu</h1>
+{% for p in site.pages_list %}
+    {% if page.group == p[0] %}
+    <li class='list_style_none'><a href="{{ site.baseurl }}{{ p[1]  }}" class="active"><span class="arrow">&#x25B6;</span>{{ p[0] }}</a></li>
+    {% else %}
+    <li class='list_style_none'><a href="{{ site.baseurl }}{{ p[1]  }}"><span class="arrow">&#x25B6;</span>{{ p[0] }}</a></li>
+    {% endif %}
+{% endfor %}
+-->
+<ul>
+{% for nav_item in site.data.nav %}
+    <li>
+        <a href="{{ nav_item.link }}" {% if page.url == nav_item.link %} class="active" {% endif %}>
+            {{ nav_item.name }}
+        </a>
+    </li>
+{% endfor %}
+</ul>
