--- a/_includes/page_left_sidebar.html
+++ b/_includes/page_left_sidebar.html
@@ -1,5 +1,7 @@
 <section class="column_left_sidebar">
-    {% include common_menu.html %}
+    <div id="nav_left">
+        {% include common_menu.html %}
+    </div>
     
     {% include announcement.html %}
     
