Add more info to recent and related posts

--- a/_sass/color_light.scss
+++ b/_sass/color_light.scss
@@ -70,8 +70,9 @@ $color_news_excerpt:            $color_text;
 $color_news_text:               $color_text;
 
 // Sidebar
+$color_sidebar_label:           $color_text;
+$color_sidebar_text:            $color_text;
 $color_sidebar_bg:              #efefef;
-$color_label:                   $color_text;
 
 // Aside
 $color_aside_text:              $color_text;
