--- a/_includes/post_recent.html
+++ b/_includes/post_recent.html
@@ -2,15 +2,18 @@
     <h1>Recent Posts</h1>
     <ul>
         {% for post in site.posts limit:6 %}
-            {% if post.title != page.title %}
-            <li>
-                {% if post.date == nil %}
-                <a href="{{ post.url }}">{{ post.title }}</a>
-                {% else %}
-                <!-- <a href="{{ post.url }}">{{ post.title }} &ndash; {{ post.date | date_to_string }}</a> -->
-                <a href="{{ post.url }}">{{ post.title }}</a>
+            {% if post.group == "Posts" %}
+                {% if post.title != page.title %}
+                    <li>
+                        <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+                        {% if post.date == nil %}
+                            <p class="date">Undated</p>
+                        {% else %}
+                            <p class="date">{{ post.date | date: "%F %r" }}</p>
+                        {% endif %}
+                        <p class="excerpt">{{ post.excerpt }}</p>
+                    </li>
                 {% endif %}
-            </li>
             {% endif %}
         {% endfor %}
     </ul>
