--- a/_includes/post_related.html
+++ b/_includes/post_related.html
@@ -6,12 +6,13 @@
         {% assign postHasSimilar = false %}
         {% for tag in post.tags %}
             {% for thisTag in page.tags %}
-                {% if postHasSimilar == false and hasSimilar.size < 6 and post != page and tag == thisTag %}
+                {% if postHasSimilar == false and hasSimilar.size < 6 and post != page and tag == thisTag and post.group == "Posts" %}
                     {% if hasSimilar.size == 0 %}
                         <h1>Related Posts</h1>
                         <ul>
                     {% endif %}
                     <li>
+                        <!--
                         {% if post.date == nil %}
                         <a href="{{ post.url }}">
                             {{ post.title }}
@@ -21,13 +22,20 @@
                         </a>
                         {% else %}
                         <a href="{{ post.url }}">
-                            <!-- {{ post.title }} &ndash; {{ post.date | date_to_string }} -->
-                            {{ post.title }}
+                            {{ post.title }} &ndash; {{ post.date | date_to_string }}
                             {% if post.series %}
                                 (Series: {{ post.series }})
                             {% endif %}
                         </a>
                         {% endif %}
+                        -->
+                       <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+                        {% if post.date == nil %}
+                            <p class="date">Undated</p>
+                        {% else %}
+                            <p class="date">{{ post.date | date: "%F %r" }}</p>
+                        {% endif %}
+                        <p class="excerpt">{{ post.excerpt }}</p>
                     </li>
                     {% capture hasSimilar %}{{ hasSimilar }}*{% endcapture %}
                     {% assign postHasSimilar = true %}
