Use font-weight instead of font-style for bolding text

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -230,7 +230,7 @@ header {
             a {
                 font-family: $font_title;
                 font-size: $font_size_title;
-                font-style: $font_weight_title;
+                font-weight: $font_weight_title;
                 text-align: left;
                 line-height: $font_size_title;
                 color: $color_header_title;
