--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -223,6 +223,17 @@ header {
     background: $color_header_bg;
     border-bottom: 5px solid $color_header_border_bottom;
     
+    @include min-screen(721px) {
+        height: 100px;
+        #site_header {
+            float: left;
+        }
+    }
+    
+    @include max-screen(720px) {
+        height: 100px;
+    }
+    
     #site_header {
         width: 100%;
         h1 {
