Add vertical space after announcement block

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -470,6 +470,7 @@ section.column_left_sidebar {
 }
 
 #announcement {
+    margin-bottom: 20px;
     div.announcement_heading {
         
         img.label {
