Align tag symbol properly

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1013,7 +1013,7 @@ section.post_column_main {
         //font-size: $font_size_default + 4;
         width: 16px;
         height: 16px;
-        vertical-align: bottom;
+        vertical-align: middle;
     }
     
     .tag {
