Fix button link styling

--- a/_sass/color_light.scss
+++ b/_sass/color_light.scss
@@ -93,5 +93,7 @@ $color_footer_link:             $color_link;
 $color_footer_bg:               #cdcccc;
 $color_footer_border_top:       $color_primary;
 
-// Social media buttons
-$color_socmed_text:             white;
+// Button links
+$color_button_text:             white;
+$color_button_bg:               $color_primary;
+$color_button_hover_bg:         black;
