Add comment for group

--- a/_sass/color_light.scss
+++ b/_sass/color_light.scss
@@ -36,6 +36,7 @@ $color_code_highlight:          #eeeeee;
 $color_code_bg:                 #202020;
 $color_syntax_bg:               #2a2a2a;
 
+// Table
 $color_table_border:            #404040;
 $color_table_th_bg:             #efefef;
 
