--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -1,22 +1,16 @@
 
 // Liberation Sans is too narrow
 // Merriweather is good but seems a bit thick
-// Playfair looks nice in bigger sizes, like titles or headings
+// Playfair Displaylooks nice in bigger sizes, like titles or headings
 
+//@import url("//fonts.googleapis.com/css?family=Open Sans");
 //@import url("//fonts.googleapis.com/css?family=PT Serif");
 //@import url("//fonts.googleapis.com/css?family=Droid Serif");
 //@import url("//fonts.googleapis.com/css?family=Roboto Slab");
 //@import url("//fonts.googleapis.com/css?family=Merriweather:400,700");
 //@import url("https://fonts.googleapis.com/css?family=Inconsolata|Lato:400,400italic,700|Merriweather:400");
 @import url("//fonts.googleapis.com/css?family=Liberation Serif:400,400italic,700");
-//@import url("//fonts.googleapis.com/css?family=Open Sans");
 @import url("//fonts.googleapis.com/css?family=Lato:400, 400italic, 700");
-
-
-
-// Unused
-//@import url("//fonts.googleapis.com/css?family=Droid Serif");
-
 
 $font_serif:                "Liberation Serif", Garamond, Palatino, "Palatino Linotype", "Times New Roman", Georgia, Times, serif;
 $font_serif_thin:           "Liberation Serif", Palatino, "Palatino Linotype", "Times New Roman", Georgia, Times, serif;
@@ -27,7 +21,7 @@ $font_sans_thin:            "Lato", Helvetica, "Lucida Sans", Arial, sans-serif;
 $font_monospace:            Consolas, Bitstream Vera Sans Mono, Lucida Console, "Courier New", "Courier", Terminal, monospace;
 
 // Title
-$font_title:                $font_serif_thin;
+$font_title:                $font_serif;
 $font_weight_title:         bold;
 $font_size_title:           30px;
 $font_title_tagline:        $font_serif_thin;
@@ -76,6 +70,7 @@ $font_announcement_text:        $font_serif_thin;
 
 // News Hub
 $font_news_hub_title:               $font_serif_thin;
+$font_news_hub_date:                $font_serif_thin;
 $font_size_news_hub_latest_title:   20px;
 $font_size_news_hub_latest_date:    12px;
 $font_size_news_hub_next_title:     15px;
@@ -94,6 +89,14 @@ $font_sidebar_label:        $font_label;
 $font_size_sidebar_label:   13px;
 $font_sidebar:              $font_serif_thin;
 $font_size_sidebar:         14px;
+
+// Related Post
+$font_related_post_title:           $font_serif_thin;
+$font_size_related_post_title:      14px;
+$font_related_post_date:            $font_serif_thin;
+$font_size_related_post_date:       12px;
+$font_related_post_excerpt:         $font_serif_thin;
+$font_size_related_post_excerpt:    12px;
 
 // Quote
 $font_quote:                $font_sans;
