Enclose font name in double quotes

--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -9,7 +9,7 @@
 //@import url("//fonts.googleapis.com/css?family=Roboto Slab");
 //@import url("//fonts.googleapis.com/css?family=Merriweather:400,700");
 //@import url("https://fonts.googleapis.com/css?family=Inconsolata|Lato:400,400italic,700|Merriweather:400");
-@import url("//fonts.googleapis.com/css?family=Liberation Serif:400,400italic,700");
+@import url("//fonts.googleapis.com/css?family="Liberation Serif":400,400italic,700");
 @import url("//fonts.googleapis.com/css?family=Lato:400, 400italic, 700");
 
 $font_serif:                "Liberation Serif", Garamond, Palatino, "Palatino Linotype", "Times New Roman", Georgia, Times, serif;
