Update license and styling

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,11 @@
     <div id="footer_content">
 
         <div id="footer_column_one" class="license">
-            <!-- <p><time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time>.</p> -->
-            <p>All original content is licensed under the <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"> Creative Commons Attribution-ShareAlike 3.0 Unported License</a> except that which is quoted from elsewhere or attributed to others. In short, you may reproduce, reblog, and modify the contents, but you must provide proper attribution.<br/>
-            &nbsp;<br/>
-            <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="/images/cc-by-sa.png" /></a></p>
+            <p><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />Except where otherwise noted, the <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" rel="dct:type">content</span> on this site (<span class='plain_color highlight_cc'><a xmlns:cc="http://creativecommons.org/ns#" href="http://dutertetimes.github.io/" property="cc:attributionName" rel="cc:attributionURL">Duterte Times</a></span>) is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a> (<span class='highlight_cc'>CC BY-SA</span>). You are free to copy reproduce, distribute, display, and make adaptations but you must provide proper attribution.</p>
+            <p>
+                Visit the <a href="https://creativecommons.org/">Creative Commons</a> website.<br/>
+                Read about <a href="">proper attribution</a>.
+            </p>
         </div>
 
         <div id="footer_column_two">
@@ -26,10 +27,5 @@
         </div>
 
     </div>
-
-    <!--
-    <div id="footer_bottom" class="license">
-    </div>
-    -->
 </footer>
 
