--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,14 +4,14 @@ layout: default
 
 <section class="page_column_main">
 
-    {% if page.title == ""404: Page not found"" %}
-        <h1 class="pagetitle">{{ page.title }}</h1>
-        <p class="excerpt padding_bottom_25">{{ page.excerpt }}</p>
-    {% else %}
-        <h1>{{ page.title }}</h1>
-        <p class="excerpt">{{ page.excerpt }}</p>
+    <h1>{{ page.title }}</h1>
+    {% if page.date != nil %}
+    <p class="date">{{ page.excerpt }}</p>
     {% endif %}
-
+    {% if page.excerpt != nil %}
+    <p class="excerpt">{{ page.excerpt }}</p>
+    {% endif %}
+    
     {{ content }}
 
 </section>
