--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
 
 <section class="post_column_main">
 
-    <h1 class="pagetitle">{{ page.title }}</h1>
+    <h1>{{ page.title }}</h1>
     <p class="excerpt">{{ page.excerpt }}</p>
     {% if page.date != nil %}
         <p class="date">{{ page.date | date_to_string }}</p>
