--- a/_includes/announcement.html
+++ b/_includes/announcement.html
@@ -1,9 +1,9 @@
 <div id="announcement">
     {% capture nowdate %}{{ 'now' | date: '%Y-%m-%d' }}{% endcapture %}
     {% assign found = false %}
-    {% for post in site.posts limit:10 %}
+    {% for post in site.categories['announce'] limit:1 %}
         {% capture postdate %}{{ post.date | date: '%Y-%m-%d' }}{% endcapture %}
-        {% if post.group == "Announcement" and postdate == nowdate %}
+        {% if postdate == nowdate %}
             <div class="announcement_heading">
                 <img src="{{ post.image }}" class="label"/>
                 <h1>{{ post.title }}</h1>
