--- a/_includes/page_left_sidebar.html
+++ b/_includes/page_left_sidebar.html
@@ -7,55 +7,16 @@
     
     {% include quotes.html %}
     
-    <!--
     <div class="newsbits_roll">
         <h1>News Bits</h1>
         <div class="newsbits">
-            <div class="newsbit">
-            <h2>The quick and the Fox</h2>
-            <p>Lorem ipsum dolor sit amet, <a href="">consectetur adipiscing elit</a>. Nullam at commodo velit. Duis ut nisl non nibh convallis aliquam. Praesent convallis, sapien ac finibus hendrerit, odio sem pulvinar lorem, in fermentum elit leo in sem. Duis convallis eget quam at pellentesque.</p>
-            </div>
-            
-            <div class="newsbit">
-            <h2>SOCE Filing</h2>
-            <p>Lorem ipsum dolor sit amet, <a href="">consectetur adipiscing elit</a>. Nullam at commodo velit. Duis ut nisl non nibh convallis aliquam. Praesent convallis, sapien ac finibus hendrerit, odio sem pulvinar lorem, in fermentum elit leo in sem. Duis convallis eget quam at pellentesque.</p>
-            </div>
-            
-            <div class="newsbit">
-            <h2>Where is Juan de la Cruz</h2>
-            <p>Lorem ipsum dolor sit amet, <a href="">consectetur adipiscing elit</a>. Nullam at commodo velit. Duis ut nisl non nibh convallis aliquam. Praesent convallis, sapien ac finibus hendrerit, odio sem pulvinar lorem, in fermentum elit leo in sem. Duis convallis eget quam at pellentesque.</p>
-            </div>
-            
-            <div class="newsbit">
-            <h2>Presidential Seat moving South</h2>
-            <p>Lorem ipsum dolor sit amet, <a href="">consectetur adipiscing elit</a>. Nullam at commodo velit. Duis ut nisl non nibh convallis aliquam. Praesent convallis, sapien ac finibus hendrerit, odio sem pulvinar lorem, in fermentum elit leo in sem. Duis convallis eget quam at pellentesque.</p>
-            </div>
-            
-            <div class="newsbit">
-            <h2>Philippine Steel Mills</h2>
-            <p>Lorem ipsum dolor sit amet, <a href="">consectetur adipiscing elit</a>. Nullam at commodo velit. Duis ut nisl non nibh convallis aliquam. Praesent convallis, sapien ac finibus hendrerit, odio sem pulvinar lorem, in fermentum elit leo in sem. Duis convallis eget quam at pellentesque.</p>
-            </div>
-            
-            <div class="newsbit">
-            <h2>Ship Building Boom</h2>
-            <p>Lorem ipsum dolor sit amet, <a href="">consectetur adipiscing elit</a>. Nullam at commodo velit. Duis ut nisl non nibh convallis aliquam. Praesent convallis, sapien ac finibus hendrerit, odio sem pulvinar lorem, in fermentum elit leo in sem. Duis convallis eget quam at pellentesque.</p>
-            </div>
-            
-            <div class="newsbit">
-            <h2>Rice Exports</h2>
-            <p>Lorem ipsum dolor sit amet, <a href="">consectetur adipiscing elit</a>. Nullam at commodo velit. Duis ut nisl non nibh convallis aliquam. Praesent convallis, sapien ac finibus hendrerit, odio sem pulvinar lorem, in fermentum elit leo in sem. Duis convallis eget quam at pellentesque.</p>
-            </div>
-            
-            <div class="newsbit">
-            <h2>Food Production Exceeds Target</h2>
-            <p>Lorem ipsum dolor sit amet, <a href="">consectetur adipiscing elit</a>. Nullam at commodo velit. Duis ut nisl non nibh convallis aliquam. Praesent convallis, sapien ac finibus hendrerit, odio sem pulvinar lorem, in fermentum elit leo in sem. Duis convallis eget quam at pellentesque.</p>
-            </div>
-            
-            <div class="newsbit">
-            <h2>10-Year Rice Sufficiency</h2>
-            <p>Lorem ipsum dolor sit amet, <a href="">consectetur adipiscing elit</a>. Nullam at commodo velit. Duis ut nisl non nibh convallis aliquam. Praesent convallis, sapien ac finibus hendrerit, odio sem pulvinar lorem, in fermentum elit leo in sem. Duis convallis eget quam at pellentesque.</p>
-            </div>
+            {% for post in site.categories['newsbit'] limit: 10 %}
+                <div class="newsbit">
+                    <!-- <p class="date">{{ post.date | date: "%F %r" }}</p> -->
+                    <p class="date">{{ post.date | date: "%F" }}</p>
+                    <p>{{ post.content | | remove: '<p>' | remove: '</p>'}}</p>
+                </div>
+            {% endfor %}
         </div>
     </div>
-    -->
 </section>
