--- a/_layouts/hub.html
+++ b/_layouts/hub.html
@@ -10,8 +10,7 @@ layout: default
     
     <div id="news_top">
     {% assign counter = 0 %}
-    {% for post in site.posts limit:5 %}
-        {% if post.group == "Posts" %}
+    {% for post in site.categories['post'] limit:5 %}
             {% if counter == 0 %}
                 <div class="news_latest">
                     <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
@@ -35,7 +34,7 @@ layout: default
                 </div>
             {% endif %}
             {% assign counter = counter | plus:'1' %}
-        {% endif %}
+
     {% endfor %}
     </div>
     </div>
